--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
+    "node-localstorage": "^1.3.0",
     "q": "^1.5.1",
     "request": "^2.83.0",
     "request-promise": "^4.2.2"
